--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ h1 {
   font-family: 'Roboto', sans-serif;
 }
 
-p {
+p, li {
   font-family: 'Lato', sans-serif;
+}
+
+img {
+  max-width: 200px;
 }
